--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qlt45.svg",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qlt45.svg",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
